k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: netflix.local  # You can use any domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-app-service
            port:
              number: 80
